@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 #!/data/data/com.termux/files/usr/bin/bash 
 
-script_version="0.1.22"  # Alpha (pre 0.1.03 Alpha)
+script_version="0.1.23"  # Alpha (pre 0.1.03 Alpha)
 
 # Define variables
 red='\033[1;91m'; deep_green='\033[0;32m'; green='\033[1;92m'; yellow='\033[1;93m'; blue='\033[1;94m'; white='\033[1;97m'; 
@@ -153,7 +153,7 @@ function hakku_framework() {
 
 		if [[ `cat $existence` == 'true' ]]; then {
 			echo " [*] ready to run hakkuframework "
-			if cd $def_loc/hakkuframework; then python hakku.py; fi 
+			if cd $def_loc/hakkuframework; then python hakku; fi 
 		} 
 		elif [[ `cat $existence` == 'false' ]]; then {
 
@@ -162,7 +162,7 @@ function hakku_framework() {
 
 			if [[ $install_hakkuframework == 'y' ]]; then {
 				git clone https://github.com/4shadoww/hakkuframework $def_loc/hakkuframework
-				if cd $def_loc/hakkuframework; then python hakku.py; fi 
+				if cd $def_loc/hakkuframework; then python hakku; fi 
 			} 
 			elif [[ $install_hakkuframework == 'n' ]]; then {
 				pause
